# contextflow

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-verifier.md  context-analyzer.md
.claude/commands/: analyze.md  process.md  verify.md
.claude/hooks/: index.js  package.json  post-edit.js  post-write.js  pre-commit.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api-reference.md  cli.md  getting-started.md  index.md  mcp-server.md  providers.md  strategies.md  verification.md
examples/: 01_basic_usage.py  02_strategy_selection.py  03_streaming.py  04_verification.py  05_rag_processing.py  06_hooks.py  07_providers.py  08_cli_usage.md  __init__.py
src/contextflow/: __init__.py
src/contextflow/agents/: __init__.py  aggregator.py  pool.py  repl.py  sub_agent.py
src/contextflow/api/: __init__.py  models.py  server.py  websocket.py
src/contextflow/cli/: __init__.py  main.py
src/contextflow/cli/commands/: __init__.py  analyze.py  process.py  serve.py
src/contextflow/core/: __init__.py  analyzer.py  config.py  hooks.py  orchestrator.py  router.py  session.py  types.py
src/contextflow/mcp/: __init__.py  __main__.py  server.py  tools.py
src/contextflow/providers/: __init__.py  base.py  claude.py  factory.py  gemini.py  groq.py  mistral.py  ollama.py  openai_provider.py  vllm.py
src/contextflow/rag/: __init__.py  chunker.py  temp_rag.py
src/contextflow/rag/embeddings/: __init__.py  base.py  ollama_embed.py  openai_embed.py  sentence_transformers_embed.py
src/contextflow/strategies/: __init__.py  base.py  gsd.py  ralph.py  rlm.py  verification.py
src/contextflow/utils/: __init__.py  errors.py  logging.py  tokens.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_api_integration.py  test_orchestrator_pipeline.py  test_rag_integration.py  test_strategy_routing.py  test_verification_integration.py
tests/unit/: __init__.py  test_analyzer.py  test_hooks.py  test_providers.py  test_router.py  test_session.py  test_verification.py
ui/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  vite-env.d.ts
ui/src/components/dashboard/: MetricsGrid.tsx  ProviderStatus.tsx  RecentTasks.tsx  StrategyDistribution.tsx  StrategySelector.tsx  TaskInput.tsx  TokenUsageChart.tsx  index.ts
ui/src/components/layout/: Header.tsx  Sidebar.tsx
ui/src/hooks/: index.ts  useContextFlowAPI.ts  useStreamingResponse.ts  useWebSocket.ts
ui/src/pages/: Dashboard.tsx  Process.tsx  Providers.tsx  RAG.tsx  Sessions.tsx  Settings.tsx  index.ts
ui/src/services/: api.ts
ui/src/stores/: appStore.ts
ui/src/types/: api.ts
