[tool.poetry]
name = "contextflow"
version = "0.1.0"
description = "Intelligent LLM context orchestration with auto-strategy selection (GSD/RALPH/RLM)"
authors = ["Furkan Sakizli <furkan@contextflow.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SKZL-AI/contextflow"
repository = "https://github.com/SKZL-AI/contextflow"
documentation = "https://contextflow.ai/docs"
keywords = ["llm", "context", "rag", "ai", "orchestration", "rlm", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "contextflow", from = "src"}]

[tool.poetry.scripts]
contextflow = "contextflow.cli.main:app"

[tool.poetry.dependencies]
python = "^3.11"

# Core
pydantic = "^2.5"
pydantic-settings = "^2.1"
httpx = "^0.26"
tenacity = "^8.2"
aiofiles = "^23.2"

# LLM Providers
anthropic = "^0.18"
openai = "^1.12"
google-generativeai = "^0.4"

# RAG & Embeddings
faiss-cpu = "^1.7"
sentence-transformers = "^2.3"
numpy = "^1.26"

# Token Counting
tiktoken = "^0.5"

# API
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.27"}
websockets = "^12.0"
python-multipart = "^0.0.6"

# CLI
typer = {extras = ["all"], version = "^0.9"}
rich = "^13.7"

# Config & Utils
python-dotenv = "^1.0"
pyyaml = "^6.0"
structlog = "^24.1"
psutil = "^5.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
mypy = "^1.8"
ruff = "^0.1"
black = "^24.1"
pre-commit = "^3.6"
mkdocs-material = "^9.5"
mkdocstrings = {extras = ["python"], version = "^1.0"}

[tool.poetry.group.test.dependencies]
respx = "^0.20"
faker = "^22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "sentence_transformers.*",
    "google.generativeai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/contextflow"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
